# AI_hedge_fund

./: .gitignore  DECISIONS.md  EXPERIMENTS.md  LEAKAGE_AUDIT.md  README.md  config.yaml  pyproject.toml  requirements.txt
app/: README.md  common.py  main.py
reports/: congress_phase_a.md  congress_phase_a_v2.md  congress_phase_a_v3.md  honest_universe.md  honest_vs_flattered.md  insider_cluster_dev.md  pead_8k_dev.md  pead_dev.md  phase2_baselines.md  phase3_context_features.md  phase3_fundamental_momentum_features.md  phase3_momentum_features.md  phase3_quality_features.md  phase3_valuation_features.md  phase4_dev.md  phase4_model.md  phase5_dev.md  phase5_smallcap_baselines.md  phase5_smallcap_model.md  sharadar_full_archive.md  sharadar_ingest.md  smallcap_universe.md
scripts/: archive_sharadar.py  check_sharadar_key.py  congress_acquire.py  congress_assemble.py  congress_phase_a.py  congress_phase_a_v2.py  congress_phase_a_v3.py  honest_universe_report.py  ingest_sharadar.py  insider_cluster_dev.py  pead_8k_dev.py  pead_dev.py  phase0_spotcheck.py  phase1_build_panel.py  phase2_baselines.py  phase35_honest_rerun.py  phase3_build_families.py  phase3_momentum_features.py  phase3_valuation_features.py  phase4_dev.py  phase4_holdout.py  phase5_holdout.py  phase5_step2.py  phase5_step3.py  smallcap_universe_report.py  verify_archive.py
tests/: test_app_pages.py  test_as_of_leakage.py  test_calendars_cache_config.py  test_corporate_actions.py  test_honest_universe.py  test_network_smoke.py  test_phase1_panel.py  test_phase2_backtest.py  test_phase3_families.py  (+5 more)
(+32 files in other folders)
